# EarTrainingAndroid

./: LICENSE  README.md  build.gradle  gradle.properties
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/kjipo/eartraining/: ApplicationTest.java  ScoreScreenTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  noteView.html
app/src/main/assets/js/: app.js
app/src/main/assets/web/: webscore-multimodule.js  webscore.css
app/src/main/cpp/: CMakeLists.txt  essentia-interface.cpp  native-audio.cpp
app/src/main/java/com/kjipo/eartraining/: ActivityModule.java  AppComponent.java  AppInjector.java  AppModule.java  AppViewModelFactory.java  BaseSchedulerProvider.kt  BindingAdapterUtil.java  CustomWebViewClient.java  CustomWebViewClient.kt  EarTrainingApplication.java  EarTrainingApplication.kt  EarTrainingApplicationComponent.java  FragmentBindingAdapters.java  FragmentBuildersModule.java  FragmentDataBindingComponent.java  FragmentValue.java  Injectable.java  MainActivity.java  MainActivity.kt  MainActivityModule.java  MainComponent.java  NavigationController.java  (+15 more)
app/src/main/res/drawable/: half_note.xml  quarter_note.xml  whole_note.xml
app/src/main/res/layout/: activity_main.xml  activity_options.xml  app_bar_main.xml  content_main.xml  fragment_noteview.xml  fragment_score.xml  main_act.xml  note_chooser.xml  record_act.xml  score_act.xml
app/src/main/res/menu/: choose_input_type.xml  menu_websearch.xml
app/src/main/res/values/: strings.xml  transition_names.xml
gradle/wrapper/: gradle-wrapper.properties
(+119 files in other folders)
